# basics

./: README.md
cpp/: .gitignore  AUTHORS  ChangeLog  README  configure.ac
cpp/src/: .gitignore  Makefile.am  main.cpp
